[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/pause_menu/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/ui_main_menu_title_font.tres" type="DynamicFont" id=3]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplitContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CenterContainer" parent="SplitContainer"]
margin_right = 1920.0
margin_bottom = 1004.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLayout" type="VBoxContainer" parent="SplitContainer/Menu"]
margin_left = 784.0
margin_top = 335.0
margin_right = 1136.0
margin_bottom = 669.0
custom_constants/separation = 30

[node name="Title" type="Label" parent="SplitContainer/Menu/MenuLayout"]
margin_right = 352.0
margin_bottom = 64.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Game Paused"

[node name="MenuButtons" type="VBoxContainer" parent="SplitContainer/Menu/MenuLayout"]
margin_left = 114.0
margin_top = 94.0
margin_right = 238.0
margin_bottom = 334.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Continue" type="Button" parent="SplitContainer/Menu/MenuLayout/MenuButtons"]
margin_right = 124.0
margin_bottom = 32.0
text = "Continue"

[node name="Save" type="Button" parent="SplitContainer/Menu/MenuLayout/MenuButtons"]
margin_top = 52.0
margin_right = 124.0
margin_bottom = 84.0
text = "Save"

[node name="Load" type="Button" parent="SplitContainer/Menu/MenuLayout/MenuButtons"]
margin_top = 104.0
margin_right = 124.0
margin_bottom = 136.0
text = "Load"

[node name="BackToMenu" type="Button" parent="SplitContainer/Menu/MenuLayout/MenuButtons"]
margin_top = 156.0
margin_right = 124.0
margin_bottom = 188.0
text = "Main Menu"

[node name="Quit" type="Button" parent="SplitContainer/Menu/MenuLayout/MenuButtons"]
margin_top = 208.0
margin_right = 124.0
margin_bottom = 240.0
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="SplitContainer"]
margin_top = 1024.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Version" type="Label" parent="SplitContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1900.0
margin_bottom = 40.0
text = "version 0.0.1"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="SplitContainer/Menu/MenuLayout/MenuButtons/Continue" to="." method="_unpause_game"]
[connection signal="pressed" from="SplitContainer/Menu/MenuLayout/MenuButtons/Save" to="." method="_save_game"]
[connection signal="pressed" from="SplitContainer/Menu/MenuLayout/MenuButtons/Load" to="." method="_load_game"]
[connection signal="pressed" from="SplitContainer/Menu/MenuLayout/MenuButtons/BackToMenu" to="." method="_back_to_main_menu"]
[connection signal="pressed" from="SplitContainer/Menu/MenuLayout/MenuButtons/Quit" to="." method="_quit_game"]
